Replaced deprecated Double constuctors with Double.valueOf