@@ -104,7 +104,7 @@ public class Component extends ScopeKeyword
             for (int i = 0; i < coor.length; ++i)
             {
                 p_par.file.write(" ");
-                p_par.file.write((new Double(coor[i])).toString());
+                p_par.file.write((Double.valueOf(coor[i])).toString());
             }
             if (p_component.placed_on_front())
             {
