@@ -54,14 +54,14 @@ public class PolygonPath extends Path
         p_file.write("path ");
         p_identifier_type.write(this.layer.name, p_file);
         p_file.write(" ");
-        p_file.write((new Double(this.width)).toString());
+        p_file.write((Double.valueOf(this.width)).toString());
         int corner_count = coordinate_arr.length/ 2;
         for (int i = 0; i < corner_count; ++i)
         {
             p_file.new_line();
-            p_file.write(new Double(coordinate_arr[2 * i]).toString());
+            p_file.write(Double.valueOf(coordinate_arr[2 * i]).toString());
             p_file.write(" ");
-            p_file.write(new Double(coordinate_arr[2 * i + 1]).toString());
+            p_file.write(Double.valueOf(coordinate_arr[2 * i + 1]).toString());
         }
         p_file.end_scope();
     }
@@ -72,7 +72,7 @@ public class PolygonPath extends Path
         p_file.write("path ");
         p_identifier_type.write(this.layer.name, p_file);
         p_file.write(" ");
-        p_file.write((new Double(this.width)).toString());
+        p_file.write((Double.valueOf(this.width)).toString());
         int corner_count = coordinate_arr.length/ 2;
         for (int i = 0; i < corner_count; ++i)
         {
